--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -42,10 +42,10 @@
 #win_item_screen_btn {
 	background-color: black;
 	position: fixed;
-	width: 50px;
-	height: 50px;
-	right: 5%;
-	top: 85%;
+	width: 40px;
+	height: 40px;
+	right: 3%;
+	top: 5%;
 	clip-path: polygon(
 		20% 0%,
 		0% 20%,
